DeskApp/build_errors_utf8.txt
cargo :     Checking retailex v0.1.55 (D:\RetailEX\DeskApp)
At line:1 char:1
+ cargo check 2> build_errors.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking re 
   ...tailEX\DeskApp):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `IpAddr`
 --> src\vpn.rs:4:39
  |
4 | use std::net::{UdpSocket, SocketAddr, IpAddr};
  |                                       ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]
`) on by default

warning: unused import: `AppHandle`
 --> src\sync.rs:9:13
  |
9 | use tauri::{AppHandle, Manager, Emitter};
  |             ^^^^^^^^^

error[E0599]: no method named `receive_packet` found for stru
ct `Arc<wintun::Session>` in the current scope
   --> src\vpn.rs:262:39
    |
262 |         if let Ok(packet) = session_b.receive_packet() 
{
    |                                       ^^^^^^^^^^^^^^ me
thod not found in `Arc<wintun::Session>`

error[E0282]: type annotations needed
   --> src\vpn.rs:263:25
    |
263 |             let bytes = packet.bytes();
    |                         ^^^^^^ cannot infer type

error[E0433]: failed to resolve: could not find `__cmd__get_m
esh_peers` in `vpn`
    --> src\main.rs:1404:35
     |
1404 |         vpn::get_vpn_status, vpn::get_mesh_peers, vpn:
:generate_vpn_keys, vpn::start_vpn_mesh, vpn::stop_vpn, vpn::
update_peer_endpoint,
     |                                   ^^^^^^^^^^^^^^ could
 not find `__cmd__get_mesh_peers` in `vpn`

warning: unused import: `tokio_postgres::NoTls`
 --> src\db_ops.rs:4:5
  |
4 | use tokio_postgres::NoTls;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]
`) on by default

warning: unused import: `IpAddr`
 --> src\vpn.rs:4:39
  |
4 | use std::net::{UdpSocket, SocketAddr, IpAddr};
  |                                       ^^^^^^

warning: unused import: `tokio::time::timeout`
   --> src\main.rs:155:9
    |
155 |     use tokio::time::timeout;
    |         ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tokio::time::timeout`
   --> src\main.rs:207:9
    |
207 |     use tokio::time::timeout;
    |         ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `rust_decimal::prelude::FromPrimitive
`
   --> src\main.rs:224:17
    |
224 |             use rust_decimal::prelude::FromPrimitive;
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E02
82`.
warning: `retailex` (bin "RetailEX_VPN") generated 1 warning
error: could not compile `retailex` (bin "RetailEX_VPN") due 
to 2 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: `retailex` (bin "RetailEX_Service") generated 2 warn
ings (1 duplicate)
error: could not compile `retailex` (bin "RetailEX_Service") 
due to 2 previous errors; 2 warnings emitted
Some errors have detailed explanations: E0282, E0433, E0599.
warning: `retailex` (bin "retailex") generated 6 warnings (1 
duplicate)
error: could not compile `retailex` (bin "retailex") due to 3
 previous errors; 6 warnings emitted
